--- a/index.html
+++ b/index.html
@@ -13,80 +13,80 @@
 <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <header class="title1">
-      <a class="link" href="./index.html">Web <span class="span-item">Studio</span></a>
+    <header class="title">
+      <a class="title-link" href="./index.html">Web <span class="title-item">Studio</span></a>
       <nav>
-        <ul class="ul-title">
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./pages/portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="caption1">
+          <li class="caption1-list"><a href="./index.html">Студія</a></li>
+          <li class="caption1-list"><a href="./pages/portfolio.html">Портфоліо</a></li>
+          <li class="caption1-list"><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="title2">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="headline">
+        <li class="headline-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="headline-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section class="title-section">
-        <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
-        <button  type="button" class="section-button">Замовити послугу</button>
+      <section class="tagline">
+        <h1 class="tagline-title">Ефективні рішення для вашого бізнесу</h1>
+        <button  type="button" class="tagline-button">Замовити послугу</button>
       </section>
       <section title>
-        <ul class=list-title>
+        <ul class="subtitle">
           <li>
-            <h2 class="list-item">УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p class="list-text">
+            <h2 class="subtitle-item">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p class="subtitle-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2 class="list-item">ПУНКТУАЛЬНІСТЬ</h2>
-            <p class="list-text">
+            <h2 class="subtitle-item">ПУНКТУАЛЬНІСТЬ</h2>
+            <p class="subtitle-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2 class="list-item">ПЛАНУВАННЯ</h2>
-            <p class="list-text">
+            <h2 class="subtitle-item">ПЛАНУВАННЯ</h2>
+            <p class="subtitle-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2 class="list-item">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="list-text">
+            <h2 class="subtitle-item">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p class="subtitle-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section class="section-1">
-        <h2 class="section-item">Чим ми займаємося</h2>
+      <section class="advantages"">
+        <h2 class="advantages-item">Чим ми займаємося</h2>
         <ul>
-          <li><img src="./img/comp.jpg" alt="img" /></li>
-          <li><img src="./img/tel.jpg" alt="img" /></li>
-          <li><img src="./img/tablet.jpg" alt="img" /></li>
+          <li class="advantages-img"><img src="./img/comp.jpg" alt="img" /></li>
+          <li class="advantages-img"><img src="./img/tel.jpg" alt="img" /></li>
+          <li class="advantages-img"><img src="./img/tablet.jpg" alt="img" /></li>
         </ul>
       </section>
-      <section class="section-2">
+      <section class="subject">
         <ul>
           <li>
-            <img src="./img/igor.jpg" alt="img" />
-            <h3 class="section-title">Ігор Дем'яненко</h3>
-            <p class="section-text">Product Designer</p>
+            <img class="subject-img" src="./img/igor.jpg" alt="img" />
+            <h3 class="subject-title" class="section-title">Ігор Дем'яненко</h3>
+            <p class="subject-text">Product Designer</p>
           </li>
           <li>
-            <img src="./img/olya.jpg" alt="img" />
-            <h3 class="section-title">Ольга Рєпіна</h3>
-            <p class="section-text">Frontend Developer</p>
+            <img class="subject-img" src="./img/olya.jpg" alt="img" />
+            <h3 class="subject-title">Ольга Рєпіна</h3>
+            <p class="subject-text">Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/mikola.jpg" alt="img" />
-            <h3 class="section-title">Микола Тарасов</h3>
-            <p class="section-text">Marketing</p>
+            <img class="subject-img" src="./img/mikola.jpg" alt="img" />
+            <h3 class="subject-title">Микола Тарасов</h3>
+            <p class="subject-text">Marketing</p>
           </li>
           <li>
             <img src="./img/mihailo.jpg" alt="img" />
@@ -97,15 +97,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link" href="./index.html">Web <span class="span-item">Studio</span></a>
-      <address>
-        <a
+      <a class="footer-link" href="./index.html">Web <span class="footer-item">Studio</span></a>
+      <address class="caption">
+        <a class="caption-link"
           href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
           >м. Київ, пр-т Лесі Українки, 26</a
         >п
-        <ul class="ul-title1">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="heading">
+          <li class="heading-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="heading-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
