--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,87 +13,87 @@
     <link rel="stylesheet" href="../assets/style.css">   
 </head>
   <body>
-    <header class="header">
-      <a class="link" href="../index.html">Web <span class="span-item">Studio</span></a>
+    <header class="title">
+      <a class="title-link" href="../index.html">Web <span class="title-item">Studio</span></a>
       <nav>
-        <ul class="ul-title">
-          <li><a href="../index.html">Студія</a></li>
-          <li><a href="../pages/portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="caption1">
+          <li class="caption1-list"><a href="../index.html">Студія</a></li>
+          <li  class="caption1-list"><a href="../pages/portfolio.html">Портфоліо</a></li>
+          <li  class="caption1-list"><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="ul-title1">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="headline">
+        <li class="headline-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="headline-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section class="section-title1">
+      <section class="headline1">
         <ul>
-        <li><button type="button">Усі</button></li>
-         <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <li class="headline1-btn"><button type="button">Усі</button></li>
+         <li class="headline1-btn"><button type="button">Веб-сайти</button></li>
+          <li class="headline1-btn"><button type="button">Додатки</button></li>
+          <li class="headline1-btn"><button type="button">Дизайн</button></li>
+          <li class="headline1-btn"><button type="button">Маркетинг</button></li>
       </ul>
       </section>
-      <section class="list-title">
+      <section class="subtitle">
       <li>
-        <img src="../img/technocrack.jpg" alt="Технокряк">
-        <h2 class="list-item">Технокряк</h2>
-        <p class="list-text">Веб-сайт</p>
+        <img class="subtitle-img" src="../img/technocrack.jpg" alt="Технокряк">
+        <h2 class="subtitle-title" class="list-item">Технокряк</h2>
+        <p  class="subtitle-text">Веб-сайт</p>
       </li>
       <li>
-        <img src="../img/new orlean vs golden star.jpg" alt="Постер New Orlean vs Golden Star">
-        <h2  class="list-item">Постер New Orlean vs Golden Star</h2>
-        <p class="list-text">Дизайн</p>
+        <img class="subtitle-img" src="../img/new orlean vs golden star.jpg" alt="Постер New Orlean vs Golden Star">
+        <h2  class="subtitle-title">Постер New Orlean vs Golden Star</h2>
+        <p class="subtitle-text">Дизайн</p>
       </li>
       <li>
-        <img src="../img/seafood.jpg" alt="Ресторан Seafood">
-        <h2 class="list-item">Ресторан Seafood</h2>
-        <p class="list-text">Додаток</p>
+        <img class="subtitle-img" src="../img/seafood.jpg" alt="Ресторан Seafood">
+        <h2 class="subtitle-title">Ресторан Seafood</h2>
+        <p class="subtitle-text">Додаток</p>
       </li>
       <li>
-        <img src="../img/prime.jpg" alt="Проєкт Prime">
-        <h2 class="list-item">Проєкт Prime</h2>
-        <p class="list-text">Маркетинг</p>
+        <img class="subtitle-img" src="../img/prime.jpg" alt="Проєкт Prime">
+        <h2 class="subtitle-title">Проєкт Prime</h2>
+        <p class="subtitle-text">Маркетинг</p>
       </li>
       <li>
-        <img src="../img/boxes.jpg" alt="Проєкт Boxes">
-        <h2 class="list-item">Проєкт Boxes</h2>
-        <p class="list-text">Додаток</p>
+        <img class="subtitle-img" src="../img/boxes.jpg" alt="Проєкт Boxes">
+        <h2 class="subtitle-title">Проєкт Boxes</h2>
+        <p class="subtitle-text">Додаток</p>
       </li>
       <li>
-        <img src="../img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
-        <h2 class="list-item">Inspiration has no Borders</h2>
-        <p class="list-text">Веб-сайт</p>
+        <img  class="subtitle-img" src="../img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
+        <h2 class="subtitle-title">Inspiration has no Borders</h2>
+        <p class="subtitle-text">Веб-сайт</p>
       </li>
       <li>
-        <img src="../img/limited edition.jpg" alt="Видання Limited Edition">
-        <h2 class="list-item">Видання Limited Edition</h2>
-        <p class="list-text">Дизайн</p>
+        <img class="subtitle-img" src="../img/limited edition.jpg" alt="Видання Limited Edition">
+        <h2 class="subtitle-title">Видання Limited Edition</h2>
+        <p class="subtitle-text">Дизайн</p>
       </li>
       <li>
-        <img src="../img/lab.jpg" alt="Проєкт LAB">
-        <h2 class="list-item">Проєкт LAB</h2>
-        <p class="list-text">Маркетинг</p>
+        <img class="subtitle-img" src="../img/lab.jpg" alt="Проєкт LAB">
+        <h2 class="subtitle-title">Проєкт LAB</h2>
+        <p class="subtitle-text">Маркетинг</p>
       </li>
       <li>
-        <img src="../img/growing business.jpg" alt="Growing Business">
-        <h2 class="list-item">Growing Business</h2>
-        <p class="list-text">Додаток</p>
+        <img class="subtitle-img" src="../img/growing business.jpg" alt="Growing Business">
+        <h2 class="subtitle-title">Growing Business</h2>
+        <p class="subtitle-text">Додаток</p>
       </li>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link" href="../index.html">Web <span class="span-item">Studio</span></a>
-        <address>
-          <a
+      <a class="footer-link" href="../index.html">Web <span class="footer-item">Studio</span></a>
+        <address class="caption">
+          <a class="caption-link"
             href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
             >м. Київ, пр-т Лесі Українки, 26</a>
-          <ul class="ul-title1">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="heading">
+            <li  class="heading-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li  class="heading-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
       </footer>
