--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
   </head>
   <body>
     <header class="title">
-      <a class="title-link" href="./index.html">Web <span class="title-item">Studio</span></a>
+      <div class="container">
+      <a class="title-link" href="./index.html">Web<span class="title-item">Studio</span></a>
       <nav>
         <ul class="caption1">
-          <li class="caption1-list"><a href="./index.html">Студія</a></li>
-          <li class="caption1-list"><a href="./pages/portfolio.html">Портфоліо</a></li>
-          <li class="caption1-list"><a href="#">Контакти</a></li>
+          <li class="caption1-list"><a class="caption1-list" href="./index.html">Студія</a></li>
+          <li class="caption1-list"><a class="caption1-list" href="./pages/portfolio.html">Портфоліо</a></li>
+          <li class="caption1-list"><a class="caption1-list" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul class="headline">
-        <li><a class="headline-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="headline-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="headline-list"><a class="headline-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="headline-list"><a class="headline-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+      </div>
     </header>
     <main>
       <section class="tagline">
+        <div class="container1">
         <h1 class="tagline-title">Ефективні рішення для вашого бізнесу</h1>
         <button  type="button" class="tagline-button">Замовити послугу</button>
+      </div>
       </section>
       <section title>
         <ul class="subtitle">
+          <div class="container2">
           <li>
             <h2 class="subtitle-item">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="subtitle-text">
@@ -61,10 +66,13 @@
               завдань.
             </p>
           </li>
+        </div>
         </ul>
       </section>
       <section class="advantages"">
+        <div class="container3">
         <h2 class="advantages-item">Чим ми займаємося</h2>
+      </div>
         <ul>
           <li class="advantages-img"><img src="./img/comp.jpg" alt="img" /></li>
           <li class="advantages-img"><img src="./img/tel.jpg" alt="img" /></li>
@@ -97,12 +105,11 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link" href="./index.html">Web <span class="footer-item">Studio</span></a>
+      <a class="footer-link" href="./index.html">Web<span class="footer-item">Studio</span></a>
       <address class="caption">
-        <a class="caption-link"
-          href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
-          >м. Київ, пр-т Лесі Українки, 26</a
-        >п
+        <a class="caption-link" href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
+          >м. Київ, пр-т Лесі Українки, 26</a>
+        
         <ul class="heading">
           <li ><a class="heading-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li ><a class="heading-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
