--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -104,10 +104,7 @@
           <p class="subtitle-text">Додаток</p>
         </li>
         <li>
-          <img>
-            class="subtitle-img"
-            src="../img/inspiration has no borders.jpg"
-            alt="Inspiration has no Borders"
+          <img src="../img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
           <h2 class="subtitle-title">Inspiration has no Borders</h2>
           <p class="subtitle-text">Веб-сайт</p>
         </li>
@@ -115,8 +112,7 @@
           <img
             class="subtitle-img"
             src="../img/limited edition.jpg"
-            alt="Видання Limited Edition"
-          />
+            alt="Видання Limited Edition"/>
           <h2 class="subtitle-title">Видання Limited Edition</h2>
           <p class="subtitle-text">Дизайн</p>
         </li>
