--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       </section>
       <section class="subject">
         <ul>
+          <li><h3 class="subject-item">Наша Команда</h3></li>
           <li>
             <img class="subject-img" src="./img/igor.jpg" alt="img" />
             <h3 class="subject-title" class="section-title">Ігор Дем'яненко</h3>
