--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,16 +26,16 @@
   </head>
   <body>
     <header class="title">
-      <a class="title-link" href="../index.html"
-        >Web<span class="title-item">Studio</span></a
-      >
+      <a class="title-link" href="../index.html">Web<span class="title-item">Studio</span></a>
       <nav>
         <ul class="caption1">
-          <li class="caption1-list"><a href="../index.html">Студія</a></li>
           <li class="caption1-list">
-            <a href="../pages/portfolio.html">Портфоліо</a>
+            <a class="caption1-list" href="../index.html">Студія</a>
           </li>
-          <li class="caption1-list"><a href="#">Контакти</a></li>
+          <li class="caption1-list">
+            <a class="caption1-list" href="../pages/portfolio.html">Портфоліо</a>
+          </li>
+          <li class="caption1-list"><a class="caption1-list" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul class="headline">
@@ -94,17 +94,20 @@
           <p class="subtitle-text">Додаток</p>
         </li>
         <li>
-          <img class="subtitle-img" src="../img/prime.jpg" alt="Проєкт Prime"/>
+          <img class="subtitle-img" src="../img/prime.jpg" alt="Проєкт Prime" />
           <h2 class="subtitle-title">Проєкт Prime</h2>
           <p class="subtitle-text">Маркетинг</p>
         </li>
         <li>
-          <img class="subtitle-img" src="../img/boxes.jpg" alt="Проєкт Boxes"/>
+          <img class="subtitle-img" src="../img/boxes.jpg" alt="Проєкт Boxes" />
           <h2 class="subtitle-title">Проєкт Boxes</h2>
           <p class="subtitle-text">Додаток</p>
         </li>
         <li>
-          <img src="../img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
+          <img
+            src="../img/inspiration has no borders.jpg"
+            alt="Inspiration has no Borders"
+          />
           <h2 class="subtitle-title">Inspiration has no Borders</h2>
           <p class="subtitle-text">Веб-сайт</p>
         </li>
@@ -112,7 +115,8 @@
           <img
             class="subtitle-img"
             src="../img/limited edition.jpg"
-            alt="Видання Limited Edition"/>
+            alt="Видання Limited Edition"
+          />
           <h2 class="subtitle-title">Видання Limited Edition</h2>
           <p class="subtitle-text">Дизайн</p>
         </li>
@@ -134,7 +138,8 @@
     </main>
     <footer class="footer">
       <a class="footer-link" href="../index.html"
-        >Web<span class="footer-item">Studio</span></a>
+        >Web<span class="footer-item">Studio</span></a
+      >
       <address class="caption">
         <a
           class="caption-link"
