--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     </header>
     <main>
       <section class="tagline">
-        <div class="container1">
+        <div class="container">
         <h1 class="tagline-title">Ефективні рішення для вашого бізнесу</h1>
         <button  type="button" class="tagline-button">Замовити послугу</button>
       </div>
       </section>
       <section title>
         <ul class="subtitle">
-          <div class="container2">
+          <div class="container">
           <li>
             <h2 class="subtitle-item">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="subtitle-text">
@@ -69,17 +69,18 @@
         </div>
         </ul>
       </section>
-      <section class="advantages"">
-        <div class="container3">
+      <section class="advantages">
+        <div class="container">
         <h2 class="advantages-item">Чим ми займаємося</h2>
-      </div>
         <ul>
           <li class="advantages-img"><img src="./img/comp.jpg" alt="img" /></li>
           <li class="advantages-img"><img src="./img/tel.jpg" alt="img" /></li>
           <li class="advantages-img"><img src="./img/tablet.jpg" alt="img" /></li>
         </ul>
+      </div>
       </section>
       <section class="subject">
+      <div class="container">
         <ul>
           <li><h3 class="subject-item">Наша Команда</h3></li>
           <li>
@@ -103,9 +104,11 @@
             <p class="section-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a class="footer-link" href="./index.html">Web<span class="footer-item">Studio</span></a>
       <address class="caption">
         <a class="caption-link" href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
@@ -116,6 +119,7 @@
           <li ><a class="heading-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
+    </div>
     </footer>
   </body>
 </html>
