--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <header class="title">
+      <div class="container">
       <a class="title-link" href="../index.html">Web<span class="title-item">Studio</span></a>
       <nav>
         <ul class="caption1">
@@ -50,22 +51,26 @@
           >
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <section class="headline1">
+        <div class="container">
         <ul>
-          <li class="headline1-btn"><button type="button">Усі</button></li>
+          <li class="headline1-btn1"><button type="button">Усі</button></li>
           <li class="headline1-btn">
             <button type="button">Веб-сайти</button>
           </li>
           <li class="headline1-btn"><button type="button">Додатки</button></li>
           <li class="headline1-btn"><button type="button">Дизайн</button></li>
-          <li class="headline1-btn">
+          <li class="headline1-btn2">
             <button type="button">Маркетинг</button>
           </li>
         </ul>
+      </div>
       </section>
       <section class="subtitle">
+        <div class="container">
         <li>
           <img
             class="subtitle-img"
@@ -134,18 +139,16 @@
           <h2 class="subtitle-title">Growing Business</h2>
           <p class="subtitle-text">Додаток</p>
         </li>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link" href="../index.html"
-        >Web<span class="footer-item">Studio</span></a
-      >
+      <div class="container">
+      <a class="footer-link" href="../index.html">Web<span class="footer-item">Studio</span></a>
       <address class="caption">
         <a
           class="caption-link"
-          href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
-          >м. Київ, пр-т Лесі Українки, 26</a
-        >
+          href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu">м. Київ, пр-т Лесі Українки, 26</a>
         <ul class="heading">
           <li class="heading-list">
             <a class="heading-list" href="mailto:info@devstudio.com"
@@ -153,12 +156,11 @@
             >
           </li>
           <li class="heading-list">
-            <a class="heading-list" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="heading-list" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
+    </div>
     </footer>
   </body>
 </html>
