--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul class="subtitle">
           <div class="container">
           <li>
-            <h2 class="subtitle-item">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h2 class="subtitle-item1">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="subtitle-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -61,7 +61,7 @@
           </li>
           <li>
             <h2 class="subtitle-item">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="subtitle-text">
+            <p class="subtitle-text1">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -73,9 +73,9 @@
         <div class="container">
         <h2 class="advantages-item">Чим ми займаємося</h2>
         <ul>
-          <li class="advantages-img"><img src="./img/comp.jpg" alt="img" /></li>
-          <li class="advantages-img"><img src="./img/tel.jpg" alt="img" /></li>
-          <li class="advantages-img"><img src="./img/tablet.jpg" alt="img" /></li>
+          <li class="advantages-img1"><img src="./img/comp.jpg" alt="img" /></li>
+          <li class="advantages-img2"><img src="./img/tel.jpg" alt="img" /></li>
+          <li class="advantages-img3"><img src="./img/tablet.jpg" alt="img" /></li>
         </ul>
       </div>
       </section>
